Updating header comments

--- a/CS570/a2/README
+++ b/CS570/a2/README
@@ -3,13 +3,6 @@
  * @username: masc0974, masc0980
  * @classInfo: CS570, Summer 2013
  * @Assignment # 3, implement an interruptible clock and countdown timer
- * @filename: p2helper.c
+ * @filename: README
  *
- */
-
-// Program includes
-#include "p2.h"
-
-/**
- * 
  */
